# a2a-mcp-multi-agent

./: .env.example  MIGRATION_SUMMARY.md  README.md  README_GUIDE.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: python-ci.yml  python-tests.yml
agent_cards/: airbnb_agent.json  fact_check_agent.json  google_calendar_agent.json  guide_agent.json  lead_research_agent.json  orchestrator_agent.json  plan_agent.json  planner_agent.json  presale_agent.json  promo_advisor_agent.json  recommend_agent.json  sub_research_agent1.json  sub_research_agent2.json  wikipedia_research_agent.json
deprecated/: delegator_agent_executor.py
hosts/cli/: __main__.py  pyproject.toml
hosts/multiagent/: pyproject.toml
src/a2a_mcp/: __init__.py
tests/: conftest.py  llm_integration_tests.py  logic_based_tests.py  test_agent_cards.py  test_executor_offline.py  test_openai_integration.py
unit_tests/: README.md  __init__.py  basic_executor.py  basic_executor_with_delegator.py  test.py
unit_tests/test_agent_cards_validation/: README.md  test_agent_cards_validation.py
unit_tests/test_execute()_starlette_compliance/: Testing_execute()_starlette_compliance.md  a2a_executor_state_machine.puml  manual_test_executor.py  mock_agent.py  unit_test_starlette.py
unit_tests/test_execute_starlette_compliance/: Testing_execute()_starlette_compliance.md  mock_agent.py  unit_test_starlette.py
unit_tests/test_invoke()_protocol_compliance/: Testing_agents_invoke().md  Testing_llm_behavior.md  basic_executor.py  sample_test.py  test_agent_a2a_compliance.py  (+1 more)
(+35 files in other folders)
