[project]
name = "a2a-mcp"
version = "0.1.0"
description = "A2A - MCP Sample"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.7,<0.3",
    "boto3>=1.38.7",
    "click>=8.1.8",
    "colorama",
    "python-dotenv>=1.0",
    "fastmcp>=1.0.0,<2.0",
    "google-adk>=1.0.0",
    "google-cloud-aiplatform>=1.91.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.5",
    "openai>=1.0.0",
    "openai-agents>=0.0.11",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pyjwt>=2.10.1",
    "jwcrypto>=1.5.6",
    "protobuf>=3.20.2,<6.0",
    "pytest>=7.0",
    "google-generativeai>=0.8.5",
    "pytest-asyncio>=0.23",
]

[tool.uv.workspace]
members = [
    "hosts/cli",
    "hosts/multiagent",
    "venv",
]

[project.scripts]
a2a-mcp = "a2a_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
